--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
 
     <div id="resume-holder" class="popup">
       <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
-      <iframe src="Resume/resume.html"></iframe>
+      <iframe id="resume-iframe" src=""></iframe>
     </div>
     <div id="contact-holder" class="popup popup-fullscreen">
       <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
-      <iframe src="Contact/contact.html"></iframe>
+      <iframe id="contact-iframe" src="Contact/contact.html"></iframe>
     </div>
 
 
