--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
         <div class="owl-carousel owl-theme" id="carousel4a">
           <div>
             <a
-              href="./Videos/bouncing_ball_project.mp4"
+              href="https://www.youtube.com/embed/aUk3JvjJaQ8?autoplay=1"
               class="lightbox-link"
               data-title="Bouncing Ball"
-              data-video="bouncing_ball_project.mp4"
+              data-video="aUk3JvjJaQ8"
             >
             <img width="100%" class="mtz-vlc-cnlog" src="./Images/bouncing_ball_project.gif" >
 
@@ -346,30 +346,30 @@
           </div>
           <div>
             <a
-              href="./Videos/RenderedCinWater.mp4"
+              href="https://www.youtube.com/embed/16ZYPKoESB4?autoplay=1"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: WATERFALL"
-              data-video="RenderedCinWater.mp4"
+              data-video="16ZYPKoESB4"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinWater.gif" >
             </a>
           </div>
           <div>
             <a
-              href="./Videos/RenderedCinBeach.mp4"
+              href="https://www.youtube.com/embed/5E64m1ZHsUM?autoplay=1"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: BEACH"
-              data-video="RenderedCinBeach.mp4"
+              data-video="5E64m1ZHsUM"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinBeach.gif" >
             </a>
           </div>
           <div>
             <a
-              href="./Videos/RenderedCinTown.mp4"
+              href="https://www.youtube.com/embed/kIfVKO1nyY4?autoplay=1"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: TOWN"
-              data-video="RenderedCinTown.mp4"
+              data-video="kIfVKO1nyY4"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinTown.gif" >
 
