--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -25,7 +25,7 @@
         <div class="box">
             <img src="../Images/game-design.png" alt="">
             <div class="content">
-                <h3>project 01</h3>
+                <h3>Game Jams/Projects</h3>
                 <p>This is my game design portfolio where I have created both 3D and 2D games both in Unity and GameMaker Studio 2.
                     These are uploaded on itch.io, a website made for game developers to advertise their work. 
                 </p>
@@ -36,7 +36,7 @@
         <div class="box">
             <img src="../Images/character_modelling.png" alt="">
             <div class="content">
-                <h3>project 02</h3>
+                <h3>Character Modeling</h3>
                 <p>Two character models I made with Autodesk Maya and Zbrush then rendered in Arnold.
                     The Sonic model was made solely in Maya then rendered in Arnold. The pumpkin
                     model was sculpted in Zbrush and then rendered in Arnold using Maya. 
@@ -48,7 +48,7 @@
         <div class="box">
             <img src="../Images/interior.png" alt="">
             <div class="content">
-                <h3>project 03</h3>
+                <h3>Modeling Scenes</h3>
                 <p>I designed a 3D interior space using Autodesk Maya and added some visual effects in the rendered images using Photoshop.
                     These were rendered in Arnold.
                 </p>
@@ -59,7 +59,7 @@
         <div class="box">
             <img src="../Images/graphic-design.png" alt="">
             <div class="content">
-                <h3>project 04</h3>
+                <h3>Digital Art</h3>
                 <p>These are various artworks digitally drawn in Photoshop.</p>
                 <a href="https://tempest-digital.io#art">read more</a>
             </div>
@@ -68,11 +68,11 @@
         <div class="box">
             <img src="../Images/animation.png" alt="">
             <div class="content">
-                <h3>project 05</h3>
+                <h3>Animation</h3>
                 <p>These are animated scenes created and rendered in Autodesk Maya and Unreal Engine 4. Additional video editing using Premiere
                     Pro was done with sound mixing along with some transitions and visual effects. 
                 </p>
-                <a href="https://tempest-digital.io#animation">read more</a>
+                <a href="../index.html#animation">read more</a>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
 
     <a href="#" class="btn"> load more <i class="fas fa-redo"></i> </a>
 </section>
-
+<script src="FixScroll.js"></script>
 <!-- portfolio section ends -->
 
 </body>
