--- a/index.html
+++ b/index.html
@@ -418,14 +418,14 @@
               </div>
             </div>
             <h2> Dominique <br> McCormack </h2>
-            <h3> Computer Engineer and Game Designer </h3>
+            <h3> Engineer, Designer, Editor, Developer </h3>
           </div>
 
           <ul class = "icons">
             <button type="button" id="open-contact"><li> <i class = "fa fa-envelope"></i></li></button>
-            <li><a href="https://github.com/stars/the-True-Blue/lists/my-projects-and-collaborations"> <i class = "fa brands fa-github"></i></a></li>
+            <li><a href="https://www.tiktok.com/@tempestdigital_?_t=8mBJSyg8wv8&_r=1"> <i class = "fa-brands fa-tiktok"></i></a></li>
             <li> <a href="https://www.linkedin.com/in/dominique-mccormack-4213791b7/"> <i class = "fab fa-linkedin"></i></a></li>
-            <li> <a href="https://itch.io/profile/the-true-blue"><i class = "fab fa-itch-io"></i></a></li>
+            <li> <a href="https://www.instagram.com/tempestdigital_/"><i class = "fab fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
@@ -440,10 +440,12 @@
           <a href= "./portfolio/portfolio.html"> <button type="button" class="btns btn-white"> projects</button> </a>
         </div>
         <div class="about-para">
-          <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of Game
-            Design from a Computer Engineer's perspective through this website as I build my portfolio. All aspects of Game Design on a learning
-            scale include: 3D Animation, 3D Modeling, Programming, Game Engines, Game Art and Project Management. This is the foundation of my
-            portfolio.</p>
+          <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of various
+            mediums and aspects of Design from a Computer Engineer's perspective. From game development, animation and art to graphic design, video editing
+            production, social media managing and content creation, I am efficient in many industries. Check this site to see my 
+            various professions in software and game development. Alternatively, you can check out my social media listed here or in my Contact 
+            section to view my content creation containing various graphic designing and video editing! Some would say that I am UNDEFEATABLE.
+           </p>
         </div>
     </div>
   </div>
