--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
         </div>
         <div class="about-para">
           <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of various
-            mediums and aspects of Design from a Computer Engineer's perspective. From game development, animation and art to graphic design, video editing
-            production, social media managing and content creation, I am efficient in many industries. Check this site to see my 
-            various professions in software and game development. Alternatively, you can check out my social media listed here or in my Contact 
-            section to view my content creation containing various graphic designing and video editing! Some would say that I am UNDEFEATABLE.
+            mediums and aspects of Design from a Computer Engineer's perspective. From software development to social media managing and content 
+            creation, I am efficient in many industries. Check this site to see my various professions in software and game development. 
+            Alternatively, you can check out my social media listed here to view my content creation of graphic designs and video editing! 
+            Some would say that I am UNDEFEATABLE.
            </p>
         </div>
     </div>
