--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -198,10 +198,10 @@
     
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span> 2021 </span>
-                <a href="https://the-true-blue.itch.io/a-pirates-lost-treasure" target="_blank"><h3> 2D Platformer </h3></a>
-                <p> Designed an adventure game where you play as a pirate seeking your lost treasure. The player acquires special 
-                  abilities that helps them platform their way to the "X" that marks the spot. </p>
+                <span> 2023 - Present </span>
+                <a href="https://tempest-digital.io/#RgeSWx8a12w" target="_blank"><h3> Action-Adventure Fan Game </h3></a>
+                <p> Developing a fan-game in Unreal where you play as Sonic The Hedgehog, traversing multiple open-world maps. This project is 
+                   inspired by Insomniac Games' Marvel's Spider-Man game series' game mechanics in terms of parkour physics and action. </p>
             </div>
     
             <div class="box">
