--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                 href="./3d_space/space3.png"
                 class="lightbox-link"
                 data-title="The Legend of Zelda: Fireplace"
+                id="space3-link"
               >
                 <img src="./3d_space/space3.png" alt="image" />
               </a>
