--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                 href="./3d_space/space1.png"
                 class="lightbox-link"
                 data-title="The Legend of Zelda: Living Room Attack"
+                id="space1"
               >
                 <img src="./3d_space/space1.png" alt="image" />
               </a>
@@ -247,6 +248,7 @@
                 href="./3d_space/space2.png"
                 class="lightbox-link"
                 data-title="The Legend of Zelda: Close Up"
+                id="space2"
               >
                 <img src="./3d_space/space2.png" alt="image" />
               </a>
@@ -256,7 +258,7 @@
                 href="./3d_space/space3.png"
                 class="lightbox-link"
                 data-title="The Legend of Zelda: Fireplace"
-                id="space3-link"
+                id="space3"
               >
                 <img src="./3d_space/space3.png" alt="image" />
               </a>
